tests/toy/neg/001662_mutation.toylang
program a = { while a program a = { } . sleep; } .
